--- a/addons/ccm-openstack/ccm-openstack.yaml
+++ b/addons/ccm-openstack/ccm-openstack.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/instance: openstack-ccm
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: openstack-cloud-controller-manager
-    app.kubernetes.io/version: v1.31.1
-    helm.sh/chart: openstack-cloud-controller-manager-2.31.1
+    app.kubernetes.io/version: v1.33.0
+    helm.sh/chart: openstack-cloud-controller-manager-2.33.0
   name: cloud-controller-manager
   namespace: kube-system
 ---
@@ -17,8 +17,8 @@ metadata:
     app.kubernetes.io/instance: openstack-ccm
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: openstack-cloud-controller-manager
-    app.kubernetes.io/version: v1.31.1
-    helm.sh/chart: openstack-cloud-controller-manager-2.31.1
+    app.kubernetes.io/version: v1.33.0
+    helm.sh/chart: openstack-cloud-controller-manager-2.33.0
   name: system:cloud-controller-manager
 rules:
 - apiGroups:
@@ -117,8 +117,8 @@ metadata:
     app.kubernetes.io/instance: openstack-ccm
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: openstack-cloud-controller-manager
-    app.kubernetes.io/version: v1.31.1
-    helm.sh/chart: openstack-cloud-controller-manager-2.31.1
+    app.kubernetes.io/version: v1.33.0
+    helm.sh/chart: openstack-cloud-controller-manager-2.33.0
   name: system:cloud-controller-manager
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -136,8 +136,8 @@ metadata:
     app.kubernetes.io/instance: openstack-ccm
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: openstack-cloud-controller-manager
-    app.kubernetes.io/version: v1.31.1
-    helm.sh/chart: openstack-cloud-controller-manager-2.31.1
+    app.kubernetes.io/version: v1.33.0
+    helm.sh/chart: openstack-cloud-controller-manager-2.33.0
   name: openstack-cloud-controller-manager
   namespace: kube-system
 spec:
@@ -153,7 +153,7 @@ spec:
         kubeone.k8c.io/cloudconfig-hash: '{{.Config.CloudProvider.CloudConfig | sha256sum}}'
       labels:
         app: openstack-cloud-controller-manager
-        chart: openstack-cloud-controller-manager-2.31.1
+        chart: openstack-cloud-controller-manager-2.33.0
         component: controllermanager
         heritage: Helm
         k8s-app: openstack-cloud-controller-manager
@@ -195,10 +195,7 @@ spec:
         - mountPath: /usr/share/ca-certificates
           name: usr-ca-certs
           readOnly: true
-{{ if CABundle }}
-{{ caBundleVolumeMount | indent 8 }}
-{{ end }}
-      dnsPolicy: ClusterFirstWithHostNet
+      dnsPolicy: ClusterFirst
       hostNetwork: true
       nodeSelector:
         node-role.kubernetes.io/control-plane: ""
@@ -234,8 +231,5 @@ spec:
           path: /usr/share/ca-certificates
           type: DirectoryOrCreate
         name: usr-ca-certs
-{{ if CABundle }}
-{{ caBundleVolume | indent 6 }}
-{{ end }}
   updateStrategy:
     type: RollingUpdate
