Fix GCE CCM for kubernetes v1.31
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/ccm-gcp/ccm-gcp.yaml
+++ b/addons/ccm-gcp/ccm-gcp.yaml
@@ -328,6 +328,8 @@ spec:
             - --configure-cloud-routes=false
             - --controllers=*,-node-ipam-controller,-node-route-controller
             - --v=2
+          command:
+            - /cloud-controller-manager
           env:
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: /etc/cloud-sa/cloud-sa.json
