fix: update secret name as per the csi-driver yaml
Signed-off-by: rajaSahil <sahilraja242@gmail.com>

--- a/addons/csi-vsphere/secret.yaml
+++ b/addons/csi-vsphere/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: vsphere-csi-config-secret
+  name: vsphere-config-secret
   namespace: vmware-system-csi
 data:
   csi-vsphere.conf: |
