Use NUTANIX_INSECURE
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/ccm-nutanix/nutanix-config.yaml
+++ b/addons/ccm-nutanix/nutanix-config.yaml
@@ -10,7 +10,7 @@ data:
       "prismCentral": {
         "address": "{{ .Credentials.NUTANIX_ENDPOINT }}",
         "port": {{ .Credentials.NUTANIX_PORT }},
-        "insecure": false,
+        "insecure": {{ if .Credentials.NUTANIX_INSECURE }}true{{ else }}false{{ end }},
         "credentialRef": {
           "kind": "secret",
           "name": "nutanix-creds",
