Fix Nutanix credentials (#3776)
* Fix Nutanix credentials

Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

* Use NUTANIX_INSECURE

Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

---------

Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/ccm-nutanix/nutanix-config.yaml
+++ b/addons/ccm-nutanix/nutanix-config.yaml
@@ -8,9 +8,9 @@ data:
   nutanix_config.json: |-
     {
       "prismCentral": {
-        "address": "{{ .Credentials.NUTANIX_PE_ENDPOINT }}",
+        "address": "{{ .Credentials.NUTANIX_ENDPOINT }}",
         "port": {{ .Credentials.NUTANIX_PORT }},
-        "insecure": false,
+        "insecure": {{ if .Credentials.NUTANIX_INSECURE }}true{{ else }}false{{ end }},
         "credentialRef": {
           "kind": "secret",
           "name": "nutanix-creds",
@@ -51,8 +51,8 @@ stringData:
         "type": "basic_auth",
         "data": {
           "prismCentral": {
-            "username": "{{ .Credentials.NUTANIX_PE_USERNAME }}",
-            "password": "{{ .Credentials.NUTANIX_PE_PASSWORD }}"
+            "username": "{{ .Credentials.NUTANIX_USERNAME }}",
+            "password": "{{ .Credentials.NUTANIX_PASSWORD }}"
           },
           "prismElements": null
         }
