add option to enable non root device usage in worker nodes by osm
Signed-off-by: soer3n <srenhenning@googlemail.com>

--- a/addons/operating-system-manager/deployment-controller.yaml
+++ b/addons/operating-system-manager/deployment-controller.yaml
@@ -73,6 +73,9 @@ spec:
             {{ with .Config.Proxy.NoProxy }}
             - -node-no-proxy={{ . }}
             {{ end }}
+            {{ if .Config.OperatingSystemManager.EnableNonRootDeviceOwnership }}
+            - -device-ownership-from-security-context
+            {{ end }}
           env:
             - name: HTTPS_PROXY
               value: "{{ .Config.Proxy.HTTPS }}"
