fix: mount Hubble TLS volume in Cilium configuration make it optional to prevent pod startup issues when no TLS secret is provided
closes #3794

Signed-off-by: tobstone <tobias@stonehope.de>

--- a/addons/cni-cilium/cilium.yaml
+++ b/addons/cni-cilium/cilium.yaml
@@ -1198,6 +1198,9 @@ spec:
             successThreshold: 1
           terminationMessagePolicy: FallbackToLogsOnError
           volumeMounts:
+            - mountPath: /var/lib/cilium/tls/hubble
+              name: hubble-tls
+              readOnly: true
             - mountPath: /var/run/cilium/envoy/sockets
               name: envoy-sockets
               readOnly: false
@@ -1429,6 +1432,20 @@ spec:
       tolerations:
         - operator: Exists
       volumes:
+        - name: hubble-tls
+          projected:
+            defaultMode: 256
+            sources:
+              - secret:
+                  items:
+                    - key: tls.crt
+                      path: server.crt
+                    - key: tls.key
+                      path: server.key
+                    - key: ca.crt
+                      path: client-ca.crt
+                  name: hubble-server-certs
+                  optional: true
         - emptyDir: {}
           name: tmp
         - hostPath:
